--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "@types/node": "^16.18.25",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5"
+    "zod": "^3.21.4"
   },
   "scripts": {
     "start": "react-scripts start",
