--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "main": "webpack.config.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack --watch",
+    "watch:build": "webpack --watch",
+    "watch:server": "nodemon \"./dist/index.js\" --watch \"./dist\"",
+    "start": "run-p watch:build watch:server",
     "start2": "npm run build && node ./dist/index.js",
     "install2": "npm i && npx prisma generate"
   },
@@ -21,12 +23,15 @@
     "@types/passport": "^1.0.12",
     "@types/passport-local": "^1.0.35",
     "dotenv": "^16.0.3",
+    "nodemon": "^2.0.22",
+    "npm-run-all": "^4.1.5",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4",
     "webpack": "^5.80.0",
     "webpack-cli": "^5.0.2",
+    "webpack-dev-server": "^4.13.3",
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
